# Midgard-Rust-Template

./: Cargo.toml  README.md  build.rs
.cargo/: config
examples/: blinky.rs
src/: main.rs
stm32f7/: build.rs
stm32f7/src/: lib.rs
stm32f7/src/stm32f7x9/: ac.rs  adc1.rs  adc_common.rs  can1.rs  cec.rs  crc.rs  cryp.rs  dac.rs  dbgmcu.rs  dfsdm.rs  dma2.rs  dsi.rs  ethernet_dma.rs  ethernet_mac.rs  ethernet_mmc.rs  ethernet_ptp.rs  exti.rs  flash.rs  fmc.rs  gpiob.rs  gpiod.rs  hash.rs  jpeg.rs  ltdc.rs  mdios.rs  mod.rs  otg_fs_device.rs  otg_fs_global.rs  otg_fs_host.rs  otg_fs_pwrclk.rs  otg_hs_device.rs  otg_hs_global.rs  otg_hs_host.rs  otg_hs_pwrclk.rs  pf.rs  pwr.rs  rcc.rs  sai1.rs  spdifrx.rs  spi1.rs  (+8 more)
stm32f7/src/stm32f7x9/ac/: abfsr.rs  ahbpcr.rs  ahbscr.rs  cacr.rs  dtcmcr.rs  itcmcr.rs
stm32f7/src/stm32f7x9/adc1/: cr1.rs  cr2.rs  dr.rs  htr.rs  jdr.rs  jofr.rs  jsqr.rs  ltr.rs  smpr1.rs  smpr2.rs  sqr1.rs  sqr2.rs  sqr3.rs  sr.rs
stm32f7/src/stm32f7x9/adc_common/: ccr.rs  cdr.rs  csr.rs
stm32f7/src/stm32f7x9/can1/: ffa1r.rs  fmr.rs
stm32f7/src/stm32f7x9/cec/: cfgr.rs  cr.rs  ier.rs  isr.rs  rxdr.rs  txdr.rs
stm32f7/src/stm32f7x9/crc/: cr.rs  dr.rs  idr.rs  init.rs  pol.rs
stm32f7/src/stm32f7x9/cryp/: cr.rs  csgcmccmr.rs  csgcmr.rs  dmacr.rs  dout.rs  imscr.rs  init.rs  key.rs  misr.rs  risr.rs  sr.rs
stm32f7/src/stm32f7x9/dac/: cr.rs  dhr12l1.rs  dhr12l2.rs  dhr12ld.rs  dhr12r1.rs  dhr12r2.rs  dhr12rd.rs  dhr8r1.rs  dhr8r2.rs  dhr8rd.rs  sr.rs  swtrigr.rs
stm32f7/src/stm32f7x9/dbgmcu/: apb1_fz.rs  apb2_fz.rs  cr.rs  idcode.rs
(+1191 files in other folders)
