[package]
name = "midgard_rust_template"
version = "0.1.0"
edition = "2018"

[features]
default = [ "stm32f769", "stm32f7xx-hal/stm32f769", "rt" ]
device-selected = []
ltdc = []
fmc = ["stm32-fmc"]
usb_hs_phy = []
rt = ["stm32f7/rt"]
stm32f769 = ["stm32f7/stm32f7x9", "device-selected", "ltdc", "fmc"]

usb_fs = ["synopsys-usb-otg", "synopsys-usb-otg/fs"]
usb_hs = ["synopsys-usb-otg", "synopsys-usb-otg/hs"]

[dependencies]
as-slice = "0.1.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
nb = "0.1.2"
rtcc = "0.2"
stm32f7 = "0.11.0"
micromath = "1.0.0"
synopsys-usb-otg = { version = "0.2.3", features = ["cortex-m"], optional = true }
stm32-fmc = { version = "0.2.0", features = ["sdram"], optional = true }
rand_core = "0.6"
bxcan = ">=0.4,  <0.6"
stm32f7xx-hal = "0.3.0"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[[bin]]
name = "midgard_rust_template"
required-features = ["stm32f7xx-hal/stm32f769", "rt"]

[[example]]
name = "blinky"
required-features = ["stm32f7xx-hal/stm32f769", "rt"]